@@ -4,9 +4,7 @@
 //import com.javaholics.web.domain.RouteDifficulty;
 //import org.apache.commons.lang3.StringUtils;
 //import org.junit.jupiter.api.Test;
-//
 //import java.util.List;
-//import java.util.Objects;
 //import java.util.stream.Collectors;
 //import static org.assertj.core.api.AssertionsForInterfaceTypes.assertThat;
 //import static org.junit.jupiter.api.Assertions.*;
@@ -25,19 +23,19 @@
 //    @Test
 //    void getRoutesSearchLocalityEqualsWarszawa_shouldReturnSize1(){
 //        //Given
-////        route1.setType("Trasa rowerowa");
+//        route1.setType("Trasa rowerowa");
 //        route1.setDifficulty(RouteDifficulty.EASY);
 //        route1.setLocality("Wrocław");
-////        route2.setType("Trasa trekingowa");
+//        route2.setType("Trasa trekingowa");
 //        route2.setDifficulty(RouteDifficulty.HARD);
 //        route2.setLocality("Zakopane");
-////        route3.setType("Trasa wyczynowa");
+//        route3.setType("Trasa wyczynowa");
 //        route3.setDifficulty(RouteDifficulty.MEDIUM);
 //        route3.setLocality("Warszawa");
-////        route4.setType("Trasa rowerowa");
+//        route4.setType("Trasa rowerowa");
 //        route4.setDifficulty(RouteDifficulty.EXTREME);
 //        route4.setLocality("Kraków");
-////        route5.setType("Trasa dla biegaczy");
+//        route5.setType("Trasa dla biegaczy");
 //        route5.setDifficulty(RouteDifficulty.EASY);
 //        route5.setLocality("Gdańsk");
 //        List<Route> allRoutes = List.of(route1,route2,route3,route4,route5);
@@ -121,8 +119,12 @@
 //        List<Route> allRoutes = List.of(route1,route2,route3,route4,route5);
 //        //When
 //        List<Route> result = allRoutes.stream()
-//                .filter(route -> StringUtils.containsIgnoreCase(route.getType(), "trek")).toList();
-//        boolean result2 = Objects.equals(result.get(0).getLocality(), "Warszawa");
+//                .filter(route -> StringUtils.containsIgnoreCase( route.getType(), "trek"))
+//                .collect(Collectors.toList() );
+//        boolean result2 = true;
+//        if(result.get(0).getLocality() != "Warszawa"){
+//            result2 = false;
+//        }
 //        //Then
 //        assertFalse(result2);
 //    }
